# obfuse-rs

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
.serena/memories/: architecture.md
obfuse/: Cargo.toml
obfuse-core/: Cargo.toml
obfuse-core/src/: aes.rs  chacha.rs  error.rs  lib.rs  obfuse_str.rs  xor.rs
obfuse-macros/: Cargo.toml
obfuse-macros/src/: encrypt.rs  lib.rs
obfuse/examples/: basic.rs  deterministic.rs  error_handling.rs
obfuse/src/: lib.rs
obfuse/tests/: integration.rs
