[package]
name = "obfuse-core"
description = "Core runtime logic for obfuse string obfuscation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[features]
default = ["aes-256-gcm"]
aes-256-gcm = ["dep:aes-gcm"]
aes-128-gcm = ["dep:aes-gcm"]
chacha20-poly1305 = ["dep:chacha20poly1305"]
xor = []

[dependencies]
aes-gcm = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
zeroize.workspace = true
